# LTPM

./: .gitignore  AssembleLTPM.py  AssembleLTPMFlickr.py  BatchGenerateRealSegFiles.sh  BatchPlaceDBImages.sh  BatchSegment.sh  ClearMatches.sh  DBImagesToRealSeg.sh  DownloadAndSegment.sh  GenerateAndSegmentTilesFromImage.sh  InstallDependenciesUbuntu64bit.sh  MatchRealSegsAndStoreScore.sh  README.markdown  Segment.sh  uniformCrop.py
App/: CMakeLists.txt
App/src/: LTPMApp.cpp  LTPMApp.h
Common/: Segment.cpp  Segment.h  Types.h
Data/Adam/TileBerkeleySegs/: Original_0_0.jpg.32.seg  Original_0_1.jpg.32.seg  Original_0_2.jpg.32.seg  Original_0_3.jpg.32.seg  Original_0_4.jpg.32.seg  Original_1_0.jpg.32.seg  Original_1_1.jpg.32.seg  Original_1_2.jpg.32.seg  Original_1_3.jpg.32.seg  Original_1_4.jpg.32.seg  Original_2_0.jpg.32.seg  (+9 more)
Data/Images/: 220px-Medved_mzoo.jpg.12.seg  coa.jpg..seg  coa.jpg.8.seg  uniformCrop.py
Data/Ingest/: FlickrPointers.mini.txt
Data/Segmentations/: myimage.seg
Ingest/Flickr/: FormatForMapReduce.py
MRJobs/: Downloadr.py  Env.sh  MatchHellaFlickrShit.py  StoreSegments.py  mrjob.conf
PlaceImage/: CMakeLists.txt
PlaceImage/src/: PlaceImage.cpp  PlaceImage.h  main.cpp
PyrMeanShift/: CMakeLists.txt
PyrMeanShift/src/: PyrMeanShiftSegmentation.cpp
SQL/: CreateScores.sql
SuperPixelsToSegmentation/: CMakeLists.txt
SuperPixelsToSegmentation/src/: Segment.cpp  Segment.h  SuperPixelsToSegmentation.cpp  SuperPixelsToSegmentation.h  graph.h  main.cpp
VisualizeSegmentation/: CMakeLists.txt
VisualizeSegmentation/src/: LTPMApp.cpp  LTPMApp.h  graph.h  main.cpp
(+1020 files in other folders)
